--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <title>Team Ghost Argentina</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
         <section>
@@ -47,46 +50,81 @@
         </section>
         <section class="main_section_experiencias">
             <div>
-                <h4>JDG (Juegos de Guerra)</h4>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaW_mKHa_TF2gw5La6jT-aMP2aUWUfhnfTThX79OmjqiQKQ4YrUABsg62dOoY_8emZhQU61n6Vyx-BuConvQlrVI52vpIGnYfzfs2Wfw_EogRs_lNA95pY6LHlOGb_lQw4kdsqoeOugykRCsymhaEAjjXt8XVODJ2aHOrEoq_FqcxHH_Wvqe4eXQgOs1qnhk4NcIE9O8WXVjFzBRNLeo7_FJQCOfzHs75QCsX6MIcpYLPnErkS_5UsXhuYwQGm3f1tjmJvzkYlzH-Oi_216Pas4cS8MOCX84K_yHxmgs45rYEZQjwjU3c5D_KrxDBb-eZQOx1kyFmyajDbN_Utac49vwN-meqtqcvHjKQ3uj6pehckVnAWDP82_TisQrVSsoA0rhxNuG3cq-cQySwfaiH7AMidXzdswYa5S7hZoEnChI7td4r65U-JUv5vy6ia-g16rZphAo4e_ShFFszf_HbrpFlGbHJ5GfkxGX67daelcl20uVZJ19Z2TYi8wL23o8B8EI8_I8tmGjt2YwKuPXjW-nBtYu4t3qwtta8ONftCkHr4AjXmk2rd6IhgNkNXsfvEOQ1zhXSnacwXo1VFZRKVN1LI3UB8CWBdS1PHjUSgNvpRuJLguyVa8tcNivUXBkqE5NLCAK7S3bKHmUjjzqFxZk_I_ghULSb45fntCOBfiWm55OrKasJsACi1wCRr_3q3sSlbGq5NGfeKDCcQ15vwT1KsOjdXYKMYSYjSQoXOobVG7FCxabdrpfFjhiTC9A65oNGQ1ySNqQGpnujrKqPOXHFHEGD0Y5aNqH4-pLJ6Da25a4Wnss9kqh6pLJ52j6AbiSDPMAJP1TS7sGTDYFQVuzTp3MDcdoBygoj_xczK5aD_83vfGzcYa-OL3qnYX3jzX2Jq_xkWnHo0VQVktUwsK9-kiWY8m5kXOVdx6uk9WHwXiMWg=w1152-h864-s-no?authuser=2" alt="jdg1">
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaVjw1ULr0ZGa4dpTDjOoXp-cRtD21saL9uGd38RfjRco5Htmho1uY4mxqMcm-kh6V_5YXQQigwH2wHXc1Ic7i5LjwqcTLQpgF3JKnyFCfF0v7tveIbbFx1yQg1fYhveJAye_xUGJpnZJeEXtMwDG2XB3951FAtBXvBebl3qhIRO9-FAD8lKtQfnf2d1o4mY3qcHdX1pxMgzaVkj3r1vnJ_OADaOcr8em4MKU6fuFk4bnTpXTdBMGoV2t575yOK_1j46vXMJYaqeYkskTYzUR2oOKa-ADDZprmmBCWConyOKLUqj3S-eSpZAOW7P0iRQjQo0jLKi4qmu5p0wqleJ0Cufsul-Zj35sKBjX0bmG6HnDKnMBGYHOuNtIwd4sxGlfyDCr_z5rKMd4irrIIdijsEIrtjHyzbZf786h5q5PptkTtdvxUiQyVvKZwUWe2-KKS0WFAXWKxhdBnMDGZ-QETQBg-gnK7rG2Jv83bPunPFnKoDRdPAHfnkR7QQvFmY71Gt2wbGWq-Yv6YmbYeZws0X-eynQ5AFe5-dNkJ3owMDmH_t38tHY6M4LEepKueekMCpWb9MJslXBfaXifAljONQhlqNdO2gvgw8WdA4FkOEmkdJvEuAZiqcZxo79hR943JELb9_Neh9GTIDDLcRlSMmXauj2nC_fAywdUojYcwQSvmy1pNWdzQyDufmMJTxlSlyf5Q7IlBhSqz2iF6NASQosZaBsV4DVmstKMLoBLNXWNQwmkAPTnAdZyt8pwieL0sOKRmhs2Vsl3C2VpIaab6RJLMQErQjhzGnxr93WnPNv6tmHUoCDXU0q1RZd7tqM-3v0ctGdCYr1UsItp8ekMhscStMsjHzTpM5Irb8aM4j9onFuZ7GLOC6NZTwRvkHaEtP8ogWcUvMbsZL5DbwDt2KOgZIRNyNW2TJwoKX9V_upCLdnIw=w1215-h911-s-no?authuser=2" alt="jdg2">
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaVKEAJvzQpA9-XJ0sAGEoPxlTxcKt4yvS60V0Qs-dQAI62EzCCqE_wnBgsVqGnDFELsVAZTbIh7k5Wb1AvpRWU0cBCIANHUOVJmja64HW971HHvdvWy3_HtVUzsYlvLW_egF_vUJv86WrnVAa7fS0TepVmBVfGxp8fc-4hRNHc9QtKeo860jefmqYofY94m8xrvP5V2vIDE1kf3hsLrBhjb2CJy6msmYpnkKgBnjtoGrbsbwm1-JLTk2tdKG6-zYTWCB-eYojXFMU9UYRCL5WVZ14ypIpsKOHVkgsGmXvo8cX32MYtEbdw12Tq3I8jVzJ0wLIivMM-jnyVg_9hYthVaL_dtTEDwEKFeUj3oc-KsxFA-jKPO2slFrvZllOP3Y1A4mI3l16ELMj-hw_OfG_7-EXBSec2_N56EFOzbvfjklPL7WjiLt22wEu7lJvzCNdLMIHEIBBGoKNUjTj3StvAptNhcpboztUCm5IPOP2JAK4PxixPmd-tKj-2tkn9ltoejz-a85BiX_iMxmzlVZrvuytUEYVsX2oYBKYwGL2O0QGAs7kUSI2R1-n4LPRZWOp7j5ATPtNhMQ7bVzkL8DpAdo9zs-6LNrzfVrLCpe6BS1vS3laF_NJlA8_9Xh6PGoCtCgvp8IZ8OgQYDmHgEBmpK62x5VwIOhCCeOS2C6BgvWJZ2rTP4DSBJJcBMhwgTXwCSM8lcUAEKjnSb1KBvmXsgOcU0U4msyL22bpLuoyScqq6Go5HPl0mIVJBbO8fe1N8pPHyKGNK658taYuTorNL3yRmddqMrz9m-0CbrRI9jknp--oDiXCzRQRL-fIXjRiC1ceFKT2ZiBp74n-4lt6nZ9NDXQeue8scM_9dBjlkUFGyE-jJudkdChjHj-pzOtItPMci1h5Ja1PmD3s4RVqPbSkqFBgreIZ-8YGblfLd6xC0p8A=w682-h911-s-no?authuser=2" alt="jdg3">
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaXCyo1-vhxchX39yJMN8DmrkAnbMyGkzOXKgyr-Rtd3HjGPaNnpVXFzSBORT8PIpkg7vHnZ0uzib4EUUpHnFrpYv1ERDcBmd_DU3HIM1q0eXKU0JT5xGXB9KXcpqEt-Ecd5ZePuIoqhmLqqMX7Ai1TvJZCM56wRmArkV_-W06d4MIaW1u3BfmjoPWcHrYYAZWZKRO0t51iifSQuOaZ8r1zB__wJCMIhPSFcMhyV2_WCiywBtpFpn-oavlNE-IZyRsZsiG-stvZHU74IneRjXpIuLMtxaWYMrqbYxV8t6jnvMae5Tlrqe0-bLsxoABXrioZQ_bzCc7zmiNYc-cNsZlXPi4-EJPZPgGGfL_wIypkpmXnJFdV5VocQ6d-4XfQK0pUufnl02QACjbEnouvNpxuVWXKRBQdPnycSrIg4BEa9BMlLtqUntWqZg96qp2zYFSapMW6ygOT7PokiP-F_jjFQ9NmJDwssfc2a1LbejoAw95KTB9u75Cg31UDY6Z1l5qpxdCdhtvLYovODb8lkZd_oBV5qB6GHC3cHQhMJtAevi9Lj5U96jiuC-vkQccXvL4zukhKN0nBZNJXf2DXwQhFG8M37D-X7P8jBkOV3gPCNd9cvik5VbEkXk7GKPucmD1ky8L0dCPN2Pmm4Nm6wn5TeTkFIAAOy2Md1e4xobrHiKd9DaCA_7rBxKtD1VO9MSCYSKOXEaCMS_xoEDCRiJExsobxK-ha90kXO4s7Qt9ZsC8C0_48tku7_CRIvy2blSzk9piXRdy_VFEmCwYpsiH0v-vH3ihZ6jLoOKAroavVvaN7BT07KRzcy0kWtac4UnKASf3FeIa-CgUuEs5D-Cb2yGj6ieJNbfbOYs4LNGhE5vvRFTH5OgIPBbXjKQBI599B1pHDGjhlDUc1DwsQkGVwWGMOzI0lsTNns3cEAAVI-q0_jZg=w1215-h911-s-no?authuser=2" alt="jdg4">
+                <p>
+                    <button class="btn btn-outline-danger" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
+                        JDG (Juegos de Guerra)
+                    </button>
+                </p>
+                <p>
+                    <button class="btn btn-outline-info" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
+                        Experiencia Airsoft
+                    </button>
+                </p>
+                <p>
+                    <button class="btn btn-outline-warning" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+                        GEU
+                    </button>
+                </p>
+                <div class="collapse" id="collapseExample1">
+                    <div class="card card-body">
+                        <div>
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/kg32Lqjp/jdg1.jpg" alt="jdg1">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/tgD71P9K/jdg2.jpg" alt="jdg2">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/HkwrgRRs/jdg3.jpg" alt="jdg3">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/bvqsNLf0/jdg4.jpg" alt="jdg4">
+                        </div>
+                    </div>
+                </div>
+                <div class="collapse" id="collapseExample2">
+                    <div class="card card-body">
+                        <div>
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/L6qPrymn/exp1.jpg" alt="exp1">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/3NkyQR5P/exp2.jpg" alt="exp2">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/Rh2WSBvq/exp3.jpg" alt="exp3">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/Z5pdqCBm/exp4.jpg" alt="exp4">
+                        </div>
+                    </div>
+                </div>
+                <div class="collapse" id="collapseExample3">
+                    <div class="card card-body">
+                        <div>
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/C5nK6Qb0/GEU1.jpg" alt="geu1">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/nc74XdgN/GEU2.jpg" alt="geu2">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/N0GmPQFw/GEU3.jpg" alt="geu3">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/y8y0PDVP/GEU4.jpg" alt="geu4">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
-                <h4>Experiencia Airsoft</h4>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaVT2kLDuET-SoYpus0UoZktbL_2XCgrw3SV1CMXNv9hFfPrPRmz7TKuLs3BAnPlhg7mVdLt-z-_8oG-LMLw-Ad6HasvP8OKEYZycXOGceMOUFckQAjjoYkEzhXdjugYlHrfN-qkv5ui2jAwrR5AzzjCK7xatqmwbcGzz195OJg4aQfiGujefq6Fma2csUZniqv_0bCFfNamy9eGVE_xyLzqeeQFleoegzjeKCZXsLbQJ-AfV0YBGova6-cmX-O_EdO6nZcF1cDqeJlRU8ZEC9dMrhvtPfgtG2iGTGG4z1d9Yye0Odu15QkrypEzJ93rCBKJU6ojOojaomdJwTuN6z4t89JG2vJwgzTT4jJ_D0JVK9Lh6mc9KS3imSyrVdvM2Va2HdvLEbS1VlzG9KL83XRnVR9vms91yG_1ez8L-W0VDjoMlg_iyXFAP5-xK9qPRSgW0As4v4l68bj5LIfh6xLo6KoyrNXczwK4vyfrNxDuyWMQDl8LqqNcQsXObXbqDnxwZjjVW7sFq-H_iWsp8jUX6dIxfJ-xpns2G5OR9OxRvIHpb1_zxLfCSZ2VVnAQS4TBPuGXCfudnY1W8jESqcVJTsQAmBbTcBJddyVB9PTKOb786SVJpcQESCUPYWeArA1AFjryY1iYDXpuEzVk9dl1U_HJ2u5bap-_CLbLL_u2lS9iOb2PR8k0B7dAXwhHymfwB8jKh5oc3WKKVeAYNDy0ReLfMAptC6smjPMswYv6zjBVnK0lxnsfLN7LFgE8CGsYmkXoQsLS-yRR0wBN5h-67VWDGKSkqQ9EjDpuqX3OiEYpmdeJbDWws4jR3T_kkJHxVveYvnTyoOdiWtE39mPD5RdQVZTwCFzEmODu6eCa81ySKrkZlj1qrpTS_B7FgXEk_N0pSf45wJZUOei998oThLvufs25pLra-TozGxR14Vlsnw=w683-h911-s-no?authuser=2" alt="exp1">
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaU0vLl5XeNYys5ZitGl-KhkzkdOxT5JKj85HpdB1AEQwmZbS7cdAsiNHZ-wbXQKYbt9mlnxkotQhgZsRKMOdWjfoLOrPhmKYXhNMq0eezk9MPTS9qvcNibM84VofllQrx8QRQhBpfpnkstTHwgGKLyUKbBqpMQrWjeEKSC014M8QrwL86uUB6D8_wp2mdi8tFJ7o4trQpexXH13LS6urpGu3ZnNEvy5QE5apXJNsPk1y731LTHnI8whZxibhZiZJ3ZuVslOMTUviAAprCKqVIg7NmvrlEXGnIJdgnbn2AcyKrMRk9sVPZIodJHR2G6bLiqaHZ5rgaZcUqdzjaNUqZHtSoHbRMjTiW95m5NzmuyAJXUIQ5DTsXGicnTj3HFsKo83TVcrjPJmbbBh-mJFyTHPvdgbqfhpBbDrvFZedYqRALuxxuTEUHFPHUSgrceJAoXmNLCi3eHBr95mvn7QpEnptsZF1EyJOh8Cbg_jgmZVVkkd8FIJfxza3bkIvPfnrTwr5lXDpBGpTcgyKXQdEpHMYi1o2_xFhUBceGtdUZSgIEW6yUP-F8lXNLcbXlFGZqbBK93X73vSM6gFBGN9KYz8LUIAa8jus0HYbHmTAsEDX3_ypKTMMXSH9iDLjRQKLfEwv7d_s5Hxh_9S28FjFJDWxYOZjap7JdNDvmTlvVqLag1GPLZd4LcgCfoqZIr3c6qaDPgpuvRf0CtCplekNXiz1RlsilpuKG_jyWMnaBt1cR_K5Z-mN7zSa2UcRN3HeiBdKp4eJt9nNbOEklMA-hjV7P6jN-PbbA912DsEzvL1D0cEtMwQa1KlHYfYrabDUKCYwMO8snQ2FjpKXvrKb66RaZ82ITcvAt0cATfqDxH68CDnkk8lFdJY6qBKuMa42aK33iAzrU7Cfgy_nxsGbUjG0ezQDIJc1738tp_3micPZPN5tw=w683-h911-s-no?authuser=2" alt="exp2">
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaWIJuLXkP4kTvyx2rB9QU7_Lm_VPbLwvNxuLMf8b_98vcAiLTuFBwRQYNdQOwkxVVQ3geO_oiAYx8YVrhLDPbdHqy6HW-FQ10B85CQwEfoz21C_CjOmqgVaiHiudk-DsVgyfuPLVT6q7VSnOTCmZEghUbjYz45SsTYE33VmpmoctfA7ZXDJ3ITtLupchuvjT_ittUPwxsNc4-zY2F_WHT7ITCMJ1ln_bFf4ATDoX7zjAWNibP6Qg5JO6nsGzOqLxM-dM2ZLo87LVqsMJ6cljZ4qTcnBgKUNP4XNNrWxX6TD2GDD6VyIljo_KC28zkNMh9WrdJk4HRvRwUeOIbA-jKG_UjIZo27Z1t8A-pTVzxHJ7gpzlPVrLhpE6bhTesKlryWa-6U0SjS2KZEuePHjTsEQ8iMBY2uvA1xnB1d5Yd_cdq3a0D9v4h9DHUglErVWw-ZgLCf6K8ug1JRZPLxcJxQ2yFJkehs4EG9OqYKTFjFNyKtXnuDune3WcRT0ErvD-FFwTANk0p4Q6eh63t8qZwFS7N_azgEzibCJJnbVCBwbkKX05MVn8aUyTWnlUgzgEnEmUsIZGI-pH1eYz1CJL2TifNnshg2OMTjje6m3Ng923LczKK4_Atwex5q9DUsWiaPNaVjdxMuVMxgfsuLqLM66VcITLa6wxnUQwzF026cM7zPDdH13ld4h2GhJe61GorJRCNEg9BzUIJYRFfMZ3kTSaA8AeC0CGvS9e6-yMq7x2RDQ98KnTGbJ74qfNkwlQ5yOvYKRopp0l9uYlr1gc7ywuYdSgPhNPkcPZgxl5kU6q7ql5KNNB4n2LegI4cepzRXVIxHA3NsB4MYpK7i_4Vp4pt8kJ_CPMb-kdlKjX-IceGQpQ6D63TlMr56AUZW1Rp7FepYiAPEe92hp8GhlC4GHhRlRLk61U-5u3w8HfXGMSJgHng=w683-h911-s-no?authuser=2" alt="exp3">
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaVYGIV7fm70xNTbP9UD8mAlnyq1jz3MkPfWK9J500pe3n56Zgp9m4aTXjp7IK8xwcLFA9Z7cArAnQv6_xnrJQbERhHZdOFHVCz6bVNTzWuroU3LnQXsTc1-WgeHY9xs0cHrmS00Wh5cejvhqcYfvNRtrwG20EI_qi4w1fs7qIVbSQjS-rfp2PzJ8FLsXbTqskStramSgWAF690kznwDHGb-0wDcEJ3gkLkXfaVfRB1MIKw_QwTV_UqNHR9GiAsOb_bQ3BNzpjL1XkqIJ7sTBiIeQClrfKtBV5JR54sGAhLgMXFLmrIAcRf_VG-yRgUmokHKvMjFybeYlV7n-uN0vkd492s5kqkeOwaISV1LAvVDSl05H8_4cXW38H7AOIC9oc9ohovX_LmKZ5Gp19b7quhPnDz_8XAjmIOvA9nIUEXgIUuSPOlYvrMvH_JptvjyoLp6GsJIGykV5nJNhR7drXQ-g-y4e7DNPRy9hLGYM89a8glplxjjdSf58F27Fv620NOa504EbV2WP58kbxdU4CMXIdVtHUmO1KabrtkC0Vido8xqblLk-8A2HjKpBrsp-aqopOBdKxFm22wqgMJqlUbSFyRYRdRV-1vhOChnx0KRFvDfsxeun8nfjYhRjJKN1fb1BECrvuqI09EAwsjhESowasoIaUBX2mbAePRNFLTi6W7y0iBA7JOqkaoeRMztIEU6S49R49-1W5sQrrLSV8Hs00LcmIMNAMkgyvZC0-ELkwz38qYD6qwQnK6oNsldr5SAO5bvePdkGa8m2fo-lscv0EMSQJnBVoLHVjmpwtAb7lxetkbt833zV6oXFX_NgCrWPZY30ZyuhFfcjeo0et25ypAAL_i8Xr4T7HHIm0T6D4zUdY1DYYLT8v6VNJEmN1nGfGz846twRuh7D9uGvDKNE8iBdUEAvbi-DkEHc7nZKD67XA=w607-h911-s-no?authuser=2" alt="exp4">
-            </div>
-            <div>   
-                <h4>GEU</h4>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaW2i_ITNLrzPnpixc0uNN2golZEgjqtPKNxsLPDNlvgZ-pkhibrLK3V-N8JpwyHK59PETBbvoUz5R2qZFK0q2b-kJQpmqcnAwoQz3Wa06a5C9LIW6aclfUb7kWRAgXWDBkpxPYwLtF9r7DOPt38rZywZn3yN7w6uqURvYkyQ1BmHMPTGitPjB1_7hSr51EU4PaoO4eJj1Zy9sjkpd9raOE9xk2FE1tvJ0fzwQHYLSf0ByTzOGfCfqFmUGL50_Thjx6gKb-wS0VZUiHjoM92sES1Pg-yQjVvYX0TFDn_qozeDO96zTtgL6-lKjw_G4W7dUp9ocVSxGGJrpmWutn8qYnHrn91km1hqRp6mYwHYECxmt3KNP7v8LTd35I4Xf8x4AJtBrPpaIaAnTeO677aJ3H9NMYvBJG9_sPyr7rUjn7GkE_TIIX22_3UaTLC9iKDNkOrRuNTRepXbJl3ITlQiZjIId7qed2O78B2xJLvxGtfLbkcQpSS8Vw6KLqSFuZFTDESFgqv-04MMtCOeAlcppGfA6fYcRMnT4PjyAZNq0j08L9BXpOPZjpYiUDREOzqTa9XUDaPuHG7khtYRT7tTs-CqmDWolSMNDpIud-Hac2dkRqIxIfum4zClDJVlEagAUdE5MI8mq0SwblrnEYu27ChDfU8rbtEy4sll_LpT7QJiTwDVfEC5x14gfjbLJMWYP0SUnzdEWX7C2_jlI3sGXHHrth0Pn_ER8lA6RJcfu9MTEZduWvaHxadAOOzYZ0aNysvIXUMTI1rDCSxAjIreAo2ZDvpbsknV-Kl8jZ2b86IQcJA7lY9t97nI32GLwvz535iAnr2llDKbLqRSsdDD8L39kVndsLEWKezJh59aEIukFVVSFJePtoDoabC5orVbASQqTkPLAhYZGCtLhNlk-SdODbhVCvqTHq4pSNMdi-cPorcsA=w683-h911-s-no?authuser=2" alt="geu1">
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaVPiCRWlN7D1KNlOAXXKLbjxYC_4T37-5lgae23hgKLDdejhYr4UbNVG7kGeC-x7PVZXo4gJxccTIabAj_e229uGbv9gQxZbAVoTMJ7i08tyC9p1wLapd-WohdR6Mt_anTp9dpuzuxRNTF9mHlE-XQTUbIvc_Pur4uSRHQAB43vkydWV_YXOtok1spI8WeL4FdxCSV5HGCwwRX1EW_XXv0BF7OUAofp7Bm2rwaZtVpwcctRrpPFayD4m-WWIbbENVsRG1IXgDmZnZbNNS78p7HhzHBRv_dJyrDvicwUJsiaTtg-hRjg0VjpT-MG_Jn1nh93klgt4PJk1QmUBsu1lzT5bfxni6PXzzeRa84V_IDST1nNPIly2V9sdwQQsDpu6Dun2PkCCrPSn8rGZqT_KxxHpVW2KFu47p7rKpeZReWAqjuHOVQ6GdyE_zXtdyVI1acs7hvYHkSSiKsmuxfEFEzMHpFei2xM9-pQ6t5KiVAEPMXuKk76LjuNmazmpseQyNbaUgSnSmP-S9fbLccMjLJjU_EgW1zn_BqYYuFRmr5EZt3DRDrDs1rRkMYRht30PgbU-PLs0zY12xKfswwuyjyV4Vn82yUL5eXq9NBJb1ogs4g2m4tsgqjyUC2yXKoNVc2sIqD5NJpDUw1uXd-bsQZhSq0JttAmc8-kFOPZcqB4ir0kTRymB_BIWu_Rwg5BwmJxa6Q3TisbsdiXi3UGzQitU-YiTOn0_9FHhwM11nNbomhtOt0iXbub88Z_GbAU7GVCWg05T-Nwy7DSsEm1__Xyukw7jKUAiwfmapb0EHL0dOVDlX4MMlLIjuPLhdtkOxeyo2wtcIAr5lZg1IKicNm51TSXsAmXbIq7t9KK8l_QPGHWE0KXyWv-2-qBXou3MtRQRO9FXegQq5NuQPMyGiqfqX4hNEiafhh3D-j318NwVVXPng=w1215-h911-s-no?authuser=2" alt="geu2">
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaWXGuum_j0QYCK8rruzKa-4llvpM6M9xFJXsGgR8QMfbNSRm6C6r-1M2Ifj_t8AvDFMYUEOp6Rmn8aCrjSHu5XMSnDEqcX31VJEqqStN5yNoauPDqvYlcivS921GJV9P-459LkACMucmeKwjoABpdsYu7d7YvW9M7Rb_FuYJpdzEwmf0FijAdW4kSgMgeMqZEZDx5nBz3pd6EpNoduEOyCtLEkmhqNPtQRr7KPH398ao2rplBVxBj9EekRgp-TXlPoK3T3AGSEfcsyKgI6HJE8mEk-dhGI-PVRFXHOPNwA0Quug1_l_UqoM8gkKKIHavhw54A1sgnQMo7MIAFu3_MHBjcqWO0o25hZi52YslhJettETyAjNUu2_V-tQP99GDZ9AMK6MWcpfvvKdR2uYC9RnicZUj8bzvNUSniuMYI5VGSUlRcx1T8_8RCOajYjrKOAENYmmj6FKy_YhCKXjM2rhWwVlmWF5-qM8sqU6fEsjuS_tbVFFgvkCKHYHRHLxiPwpjxegz_9G0SbKoF0V-n8lhEtugDMfKBftMEXmLOTMehkilE1-HOA5YYiKIlHVVF49J7H_eRTFEOww5dBr0T_OLHI84gBbwmmoFxm2usG76r5e46sh_B4NrgvNZrCW5Uuj0jj8f0Ug0Wb56Kgm-5REVlWx-JR3lcDFdo9elqRj-Wl0w-SHp2CXunlCn03QcqzZongvKg3beN8vYxjeQtR9VaHoC1vlKcf-5pCvXLr06Jf0kftPxWF2tTPzJepd004qe_B8yel1Qdiik-J97g5HLLG1triJHYN9Ugy1RXb9OrRdae4jSWeHS0EPTN3okBwtJlRMfEN4iSS-MdIOzwe1WszBLFVhW8aAKGJ_y8IyvN8VUGoed9BuPvh0Uyr6OJmD5qSD3bVw9lkTt9g7CUHUJn3N98DIJLanVsBcQsoVHIlopQ=w1215-h911-s-no?authuser=2" alt="geu3">
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaVBWfLl5yuFCuFVULCu-sKwx1api1cLglh3SgvViwJ54gR6wNjfpQwc6ls1N5kg-XRjgOQViTYbIqXg5Sj3lV8k42WtLZz3xn95_uaPDrAyTP-UxBOj0xxDKHD24LZXsb80d7NNOIR4Izuly72RkRLvLDKgIIFwxF3L1mu0mIv8ZOuNEZDd9e0VPhjcmjq4XNEYldsMnb0jrwiajRqEQbp9l9cLJ2eUpZi-EK_Nz7KnYyucsBvrUTnyJmcI__dYB2wRmgm0et-9yq_qM8dWpRmZpxuWut3mXt1va0SiN0bAIeFK82Cov_sysj-Md0eT1810EkvIihKXlNRjN4FW7tXpOpbhOcBlL-Ou6E51fu8NjDWkJOrKfkpQqwwxrgRCD5a_oOSfufP0ZWAhrKTg2cQRL1YNTscOto7jFh2TgeO6t6zajDMLlNM2mQn2w4kjv0QT2STsl8UAhMfn_GWGmlWSIo9ztTsOxzcBh_gE-sqXwlmYpG3l_zcyLXKzjxmeUm0xhLThBhxDoy78R--J5D77bh-5DqCKyRWVl6uaAvYR7KRt5YcsebsndAZ6qVlo1L_0_yJCh2ctKzDYGu8MS_A9ve3Wp11bBZpzriMFH54pMcJFO_3urO6tt3-LoP_AvMauawAvJ1AavGt37wm5vg4ar2PJBlCVpXALAks9B7oGmEXmXfYzmd6mdx18U1xa2B4ERK_8LTV6LF9xyaJwKwMkGFKLqGXcIE76Wx3oJ21fA5UseXKn4RzR1yFz7Wm1QIJ7gHhPbzKLOulltkszToGWL2CVxsQDD0xbSM0gTCaODC-C3n-SGD_HLjzR4wfa9kPdKkj3442FeMieRIrFcPK5BJTbrrN4t6aifTYU2ynp0vPSGkgOCqzPa39ZvuBGcObZ3qoeCYj_ruidM3XM7kCdh1iWeZD7USJbcU-ch5mr8ZjqxA=w683-h911-s-no?authuser=2" alt="geu4">
-            </div>
+
     </main>
     <footer>
         <div>
             <!--panel de navegacion inferior-->
             <ul class="nav justify-content-evenly">
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../index.html">Inicio</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../index.html">Inicio</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/quienes-somos.html">Quienes
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/quienes-somos.html">Quienes
                         somos</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/experiencias.html">Experiencias</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/experiencias.html">Experiencias</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/merchandising.html">Merchandising</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/merchandising.html">Merchandising</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/contacto.html">Contacto</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -109,6 +147,9 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
