--- a/pages/merchandising.html
+++ b/pages/merchandising.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <title>Team Ghost Argentina</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
         <section>
@@ -45,30 +48,54 @@
         <section>
             <h3>Podes comprar algunos de nuestros productos:</h3>
         </section>
-        <section>
-            <div>
-                <h4>Soporte para M4</h4>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaVFu3te49_m1OLs2w3fti-Gw-HHiPbsffZ3fqCFhSQ2WSJ24mISl_Dzs-wHTc0CmYrf-EbvWFrlnpFpY5EmMxQZzqK75W9ZXzqguIdzBYDcukGImkS1YSFKgPijVMPeNF8wqUpfRn51gZq08RSjrpf6dMmtPn1leqSvX_bJ8iXxxT9Cexoh4OHkZ4KnS-ox0_1DdM3EaqUXaeGby-7Q2-3AxvR_00z0aVWv-YzMeAJfXGMWTIuuiUE_q3gE-PwqSkTtDPdTnh6MSwoc-VyH8Q1x8_0P7_QvlBHeEGHnFzkFBAGdShzwhI4U0wUMQicWz1ejYouEAwpMlGc3MHKJB_rWxzddkCJMgaGe9CnoWu-bpZO1QifqOE7Fj8zz3U2xpCtLGbk8JGiyh-7jdgJwZjgM_s4X8DXWRwO3qFjg_usxmN8HSq0l0IPgx9uoKRFFTrJ8EqgYR5lREQNz6TITH8DOg3Q4WbFiC-U4F1M4r9k_XP7SDXEjyK6PZRauigzK-t4HXcYxfCdS9Juf7iZkAZ2ARrkwLSvUzsCk3uBoqdL2VY7AB1ZM9BXemKkwbwjGhBnGXwnKyfGkqth8L4gFPArJSdN13BY4AGGouRcmge0TdMRwC76rnaxHocAEwjRcwN3rAVHwLenQFP9ZWNzJO3P3NQeOGaLgz2kO4J2iy1CTFJBxC6tSLkh4JWtrJallSosO_ltW4dzOxUeIS_Db6K3tF_juuUvY6hugAg9pr5zKfhJxBOfwr1mlng65KGhvvdf5BYKLP2gDFKE9JLhQDeorKXSvGEmb5fW6FTP7F2UUem40wyKXHrwP54HVa97jhiTWkxYfsxBG6WZDWJZwYdYT8J4iF5myv_b_GWFZ3hF2GNF0c1n3B5GXd1k1EUaJyA50D5tB_9KIqQxzqNL-FehDVosAutRqNuEBJzWbm06lvrzNPg=w1600-h900-s-no?authuser=2" alt="soporte_m4">
+        <section class="main__section__merch">
+            <div class="card text-center mb-3 merch1" style="width: 18rem;">
+                <img src="https://i.postimg.cc/PxRxyjpK/merch1.jpg" class="card-img-top" alt="soporte_m4">
+                <div class="card-body">
+                    <h5 class="card-title">Soporte para M4</h5>
+                    <p class="card-text">Impreso en 3D con todo el amor de Likoy. Util para poner en exhibicion tu Marker.</p>
+                    <a href="#" class="btn btn-dark">2000$</a>
+                </div>
             </div>
-            <div>
-                <h4>Guantes Tacticos</h4>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaWR0nTcx2M29bU7LjXDm5TRHxfTNGq3ZgQah4BRYo98uLOhIvlI_029zCq5mj6fIbWWC2aLzjKV6o-jBKg6yzOvZwCRZGzEltSPskTGbM9T6MEjazcbnhZlUGEQIav8BQGDsryNB-eMhBHhth-M2Nd-t5CKaJkF6GfuBTKiVXU0o5mGF7UaSbHl_Hptm9xPCJDOnjq-lpXqZv1Ad7P7LJN-I0gNwwxbxyBUQfQ-ejtEnD6rgUfZQ5xxbUo8P67vv7jynERmWOsl5l-GGGOZqeB5i_y1hQVmGulKr1fXNATFUUk1fHOeAtLHyunpSixzZtcyxSaGrxzOYLQcOXhu7Gbtdkstj8TKK4005KlfIyrPx_-o0hMAmLCkm3xVgcnlQ3YCBwOg7z32Te7EatbTrNxlOEREUKuViu-t7orZcgLbJvfaEPsqxVI0WI_1rrDPmooqPWLsTRAJlx5y779ITX0_8E28vSJZpDY0FDxLDLqOXvHOU3ttqApRQtJzL43YYPTYpzHGHH88DKJ2mYG84wlo0Qv5welTnsMOnk-tAc8mYrfBUfOpjZNUWO9ZAcC4A8El9FEQNo-ACekyxbuKpyysLnptej4vafqIMnm-LIpV5j3Ko-cWojfNZHaFfcWa77IiNxAycpitoHECmru9gbX3f5tA9jrU1L4nEOUsnw14WylDZHPtOnwXJCYVrk4oJDIMX4dCp3cNXzkLjRZGZeD2_cJdxR6mD0yHe_NLYckyN5GWqeeH3ZMmhfBGETwFiMpL4o2y5TzWSueKqEXkJicROpDrwatPXv1HWVAbmU1739NSiRXQt5UKWky9ZUNOwCCKYNmL5H1v_u65JpUI1WY6Vm9Y1mRraApP36u7p2nzhoqPwwbhbqCK4uz9cWorescjYHkHDz8JwinMtetb1LXfWDcv8CmMPRolzFEwmuwjj9-XcA=w340-h340-s-no?authuser=2" alt="guantes_tacticos">
+            <div class="card text-center mb-3 merch2" style="width: 18rem;">
+                <img src="https://i.postimg.cc/633qC33y/merch2.jpg" class="card-img-top" alt="guantes_tacticos">
+                <div class="card-body">
+                    <h5 class="card-title">Guantes Tacticos</h5>
+                    <p class="card-text">Para cuidar tus manos y tener el mejor agarre en cualquier condicion.</p>
+                    <a href="#" class="btn btn-dark">5000$</a>
+                </div>
             </div>
-            <div>
-                <h4>ChestRig Multicam</h4>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaV7CrVC0glbuscMA4jj9LtjcDCqoppi5aPIADGJkLRWe9k984c4ztHQwB6i5BDJCm-qpbeyiuu1vxgSU9Zer1rJN8FJ7kQBREXl3n83ioKqpS4Tq7SmA32xz2n5kpx18iVdn_7z2a0lEkQoHCgx7kh2qiktnbpVcaibTVCituR3e_uQBrQK6oRy7JYn7zlQ7uqW_6kOsbL-2UB1TM9mhaoAM6VXB_UJJQOfnk4MQXkrEkjk3lF5fIU_go7wF_gd0K9f8Z6hxDgiAIPPuMMuzLufZpes_zZGGYSsNiXnhXUZGuYsOlDlKN8riWg3tc8WDvflClbTE-GC2yXfBhxbcwjYv-0hq6cjccbgc3JXfIGQFQ1NHX5-udEjRPDsPF59yvJq2FnUGl5jssrRrOCn7qN25y8VgU_lMAVYezgmeGm5u6HfVhAE_KK4kEVeSJijih0jZIbY6z-7sljcjxcmwkj8exlkE_Q6dx0jZrKoejAv9c_awoc5kk489tVfgtdCjXTiX0AJaDMNvwK4vMjbmAKL5JHZpRYt7wScrWiEuCho-JgVKwZpsETskLfoVLEetj8SkwPNKCliZqkHv9V2BRdFKlM4P-bS1s8bRPE1cQsHDPRsYowB3WFQ4qO0GmtcsrpocYDRzNCAm0t234by0_jhQj_oTqsKT884wAEbZmyxKlmZHNHvvn_CeBcc5Qvs_2QS3CWjZwsJKSyxImlk5P5oPQpw1wOgjBwFGib1ojKZMV7PQiuOisomccm4YWdRK6nxq-DCzFr-WkSG6GYUhaAkzOzqPTi1uzNM9W7DsuU0T7QWy5gp6MSVQNtkrjzAKWYGU0cK4tET8Ygv44SPjrA0QLQVTUr8B7r-dWeG18VM1LEZCXVBVjNoKm-No7uR1iVkYLm-4ZQpcCSAKzbay_c_yghuhu9jhtYreVQ82qyTpprxXw=w512-h911-s-no?authuser=2" alt="chestrig">
+            <div class="card text-center mb-3 merch3" style="width: 18rem;">
+                <img src="https://i.postimg.cc/kDr5rvyb/merch3.jpg" class="card-img-top" alt="guantes_tacticos">
+                <div class="card-body">
+                    <h5 class="card-title">chestrig Multicam</h5>
+                    <p class="card-text">Siempre lleva todo lo necesario para la batalla encima.</p>
+                    <a href="#" class="btn btn-dark">15000$</a>
+                </div>
             </div>
-            <div>
-                <h4>Funda portafusil</h4>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaUTwCQJ8YKpfExXYqlzu9T4GypPgvxQYMxk-AOD9fKJ9aOIJqxS0RyMp1W_9ubjKGrmO0YXNoVZdAcDaNRuRmEBubDqdYul-UY9DNzjrnLhC2LKq1yvAaUeF_2pUT5XUjHB3BOhpryIOmCncuF5uz6Zx0qyQrxX11rLdfwvQJw9-ISB3sY-eu35UhSEaHl6Avr24D_C36OTDAmtGMCgCBaf3BGqa7M4DX6teNYWUvJMjAC_XWWyGWkSM9lzXQvnz_TdHVYK7y6QemdU0VH_L4AZKEz7a7mrR3_3PwGzLIepOyDNdXtgxeAoJFYZWfgRIyZhqiB_ROSBqbhckBZrWI62GeEBcEG7l10x2Dy3uylRjQ5kqR3j5Uz9zrQ43IgZWu4ifBGuXFQuUpV8lbWt48Glu9nmy0KO1PO5qwuxwrEpJ1SCBeIncbOIBq60_ypVh_zJUha7tP14qcv7MJ5Wj1FBBzatAd7M4AaVP_k7QM5ubSyIltbQA9EeGzZT2EklpGMOEfpG1ZH0Y6BYVwmdbQw7SC4d60T783AIML-d8f6xsznlAPz60lKbEq_M8wPm0mo2qjZybBIIxOzPKMmy6S6z5TXfEZZ2KJ2YhYFuJTU2klP_Rr_-9CJ0YDDzjmswN0IFFNy4hAMbBs5RgpVspvisiRMNlwl7JA1xYex01tsnl4JNKKBePxS1EucpO6bxqZ6ogUxxvmDUSTSWWenrgXFxTu9WwjrwCNXz_w3nlW57LxU4WCgdk3zyWRKOrAClakyJlQ4kz019fxB01FxNVW0IRYM9CySqUJb3UwJUDCal5sb5SYOI8Io69m_pdEIubG4bw9EhLxkGiUsiaRCWW_UdH04X46QD464N-Ao7zccXeS-hWtVY8wME8_oVXKc0mFxaygb9IdvOaeUhFZKA519qbaB6l7CViJDsrD1U8GbJglusNQ=w512-h911-s-no?authuser=2" alt="funda">
+            <div class="card text-center mb-3 merch4" style="width: 18rem;">
+                <img src="https://i.postimg.cc/gcxqWcDz/merch4.jpg" class="card-img-top" alt="funda">
+                <div class="card-body">
+                    <h5 class="card-title">Funda Portafusil</h5>
+                    <p class="card-text">Para transportar tu replica de manera comoda.</p>
+                    <a href="#" class="btn btn-dark">3000$</a>
+                </div>
             </div>
-            <div>
-                <h4>Parche Team Ghost Argentina</h4>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaWshfF5EaYa4qQe1uPIbWhI23etHd2Se0un2pPxDmZgcotbUOa8T-HPjKhfiva9ADQdJmQTogpZZclzbnEVoLMB4cRXttiXWvgNrOLrDtudAoKbhbzo-6C5ssDXs03Vn2aQSoHBKpzmxO_LndYIaj9CQgxUZFc8sya07rTZDkl2A_a2O5ncYru4mMMWoLYCmrqzN5AIugWN9xhoaHLbnkscI_pPGunKSO0Uf9Q5m99B4uKTBh3lRpb3sDE9IrkNN1SOJ1cLzP8wcEKzzgagXBCiu28DZnYSTzQDhZAksa3RCaCMS9GABy19IQZozq1LZ96zKd9Bebpl3agmSpHkdlPxF-JUIIsj0JpmyCfksMeHybkOpWiR1pg5zlVgBOhqRfajzFypYOaG-aSW7GNjDAmsYtaf2ETD2QDbX125w4wozSDrJMeuWrXc3YYw_zonTqv3wX7znGUz1swCCCDvs74tJEO2VDwac0kOVb9kOESFkeEGnhmRCpq2_HHfnuxb9H0fW7_dlQjjbk1eFoAIJrhyzXJcdFFk0YN_B3Aip6Os75f7C7RRqoQmYIX_EXhufSh_6o9mThw8-qLBDSseJtezboZe7qiil9v86hpnVd9XuzyhHiBiLhJqHsyCmijDND3s4CW1ggWk6P8LqzsO9WfRNPEA-v9pY_H2KyKqAuy_0JELpJOCrxCzCz69N1ZH5lrPnZ2CBqiADgVoik4Pu2IN8nyyD43qorclLJ2DUzNJpBinIO7CRhEQKVKuqvkMdFbdMFwkIwnrbiK_5zRmlnRkSveTS-sFMbu1V8nPcbONb74Z3ugPF8RxWHiezxVmJV_XWa-wtGczdA6eoIXmBwoJi5Te-nwstc2rmQCpkeGt7vtcDkfzHFlgnW2azK7IUDoXyNbcTsV_tTdwgFRr-nw84dzJWkon6oggCL8T7G_U8QPAMA=w683-h911-s-no?authuser=2" alt="parche">
+            <div class="card text-center mb-3 merch5" style="width: 18rem;">
+                <img src="https://i.postimg.cc/J7S34w6b/merch5.jpg" class="card-img-top" alt="parche">
+                <div class="card-body">
+                    <h5 class="card-title">Parche Team Ghost Argentina</h5>
+                    <p class="card-text">Podes añadir nuestro parche a tu coleccion.</p>
+                    <a href="#" class="btn btn-dark">4000$</a>
+                </div>
             </div>
-            <div>
-                <h4>Mags Midcap M4 PTS EPM</h4>
-                <img src="https://lh3.googleusercontent.com/pw/AJFCJaWuF_0C9Fm3IKeMZkDoA2Q1f9DhaB53n65tHsqq2EOBy1Pnst17tfpafDqatBK8L2FXaGv6mdkFvA_M-hoEMpdmLA5pSBInz7nOarKktpfp3C9CVJUmM3SZ1DTUSnYkm1il7t7iwMThE5Es35jedxv91BCj-vA2re6ddRw2kJ7h2E1sHyp5b_9tkY4DlSNjQfPVewlTEo_HeQINfZVkuRHyKJTQSBihptSxA34Ag1aRl1FC0gsz9nKK18bgJx9yltaHTSKnVQFvKTHdI6JpsqaZzEezwVMKGExe9J3JsYGW8RNe670x5qO_g07MInWYTefOOqLiJTwvgjYSe1mvWl5k3vwQWl5GdOnSQutpU5oYlsAwQsPiQhxQUHHCiSMd4Uoep1-yvvFw-6GcYrOAx_oZsg4qZLRR3OfcrrqpbXSigliTbAxyItO1lhQfaisaL3mRHjLilr-iagYpSpl9HXt_FSM-Wl0F0sqBqNuAA_vwtDBK_N8nAcZh_Ag_Vv5SeVbUJ76IxbwY_9jLN0czKfl1izP8ATCGOs-W5QQIF8O51kn5b1mBKVtK7NScKabCL95ky6f7rNk6a3WYgAH0nOHSUV_IPA7u0EH-1R3KOLGrTE3r12hLtJ7oBWLbHxInDiniS_TKza5XMIHhVXuwbMwpiCf7Dv5J2-UIW77ZmJSqwDbyrQOWSmFReSma02FvXTgVap9ayppyUBNNh_Q0-KL8gwE_fj0QLkLYxFBc0hZ7irLxmYylyNQTu0JPwbgFMYk1HQw0uCM39AM1XMUfvsaLow3VXthaYaKPm2fSe8W7Tv9hJ_wrOYtM2OyWLUQkqgA-WaXvWPHDpOXZsyqc1-UgTD5CHIkX5bjJsSAy4Y-VmCVHK912N_a2-vAUV_5igYCU8gOr5BvPt3WuEtZ-qr2bLudsMq8rrxUF3f3s63haiQ8cYQ=w1215-h911-s-no?authuser=2" alt="mags">
+            <div class="card text-center mb-3 merch6" style="width: 18rem;">
+                <img src="https://i.postimg.cc/fRNxmchy/merch6.jpg" class="card-img-top" alt="parche">
+                <div class="card-body">
+                    <h5 class="card-title">Mags Midcap M4 PTS EPM</h5>
+                    <p class="card-text">Capacidad de 150 rds. Los mejores mag midcap del mercado.</p>
+                    <a href="#" class="btn btn-dark">12500$</a>
+                </div>
             </div>
         </section>
     </main>
@@ -77,20 +104,25 @@
             <!--panel de navegacion inferior-->
             <ul class="nav justify-content-evenly">
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../index.html">Inicio</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../index.html">Inicio</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/quienes-somos.html">Quienes
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/quienes-somos.html">Quienes
                         somos</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/experiencias.html">Experiencias</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/experiencias.html">Experiencias</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/merchandising.html">Merchandising</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/merchandising.html">Merchandising</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/contacto.html">Contacto</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -113,6 +145,9 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
