--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2 class="header__h">Airsoft Team</h2>
         </section>
         <nav>
-            <ul class="nav justify-content-evenly">
+            <ul class="nav">
                 <li class="nav-item bg-primary rounded">
                     <a class="nav-link btn btn-secondary text-light" href="./index.html">Inicio</a>
                 </li>
