--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <title>Team Ghost Argentina</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
         <section>
@@ -22,7 +25,7 @@
             <h2 class="header__h">Airsoft Team</h2>
         </section>
         <nav>
-            <ul class="nav justify-content-evenly">
+            <ul class="nav">
                 <li class="nav-item bg-primary rounded">
                     <a class="nav-link btn btn-secondary text-light" href="../index.html">Inicio</a>
                 </li>
@@ -44,34 +47,44 @@
     <main class="main__contacto">
         <section class="main__section__hero">
             <h3>¿Queres jugar con nosotros?</h3>
-            <p>Animate a conocernos. Somos gente copada. Compartimos divertidas partidas y priorizamos el compañerismo ante todo. Podemos agregarte al grupo para que estes enterado de las proximas partidas a las que asistiremos.</p>
-            <h3>¿Queres competir contra nosotros?</h3> 
-            <p>Si tenes un equipo y queres ponernos a prueba, no dudes en completar el siguiente formulario. Nos contactaremos para definir una fecha de partida.</p>
+            <p>Animate a conocernos. Somos gente copada. Compartimos divertidas partidas y priorizamos el compañerismo
+                ante todo. Podemos agregarte al grupo para que estes enterado de las proximas partidas a las que
+                asistiremos.</p>
+            <h3>¿Queres competir contra nosotros?</h3>
+            <p>Si tenes un equipo y queres ponernos a prueba, no dudes en completar el siguiente formulario. Nos
+                contactaremos para definir una fecha de partida.</p>
         </section>
         <section class="formulario">
             <div>
                 <label for="nombre">Nombre:</label>
-                <input type="text">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder="Nombre Completo"></textarea>
             </div>
             <div>
                 <label for="equipo">Equipo al que pertenece (opcional):</label>
-                <input type="text">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder="Si es que perteneces a uno"></textarea>
             </div>
             <div>
                 <label for="telefono">Telefono de contacto:</label>
-                <input type="number">
+                <input class="form-control" type="number" placeholder="Inluir el +54">
             </div>
             <div>
                 <label for="mail">Mail:</label>
-                <input type="email">
+                <input class="form-control" type="email" placeholder="name@example.com">
             </div>
             <div>
                 <label for="zona">Zona en la que podes jugar:</label>
-                <input type="text">
+                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Escribe para buscar...">
+                <datalist id="datalistOptions">
+                    <option value="CABA">
+                    <option value="Zona Oeste">
+                    <option value="Zona Norte">
+                    <option value="Zona Sur">
+                    <option value="Otro">
+                </datalist>
             </div>
             <div>
                 <label for="comentarios">Comentanos cual es tu plan:</label>
-                <input type="text">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="O propone algun plan..."></textarea>
             </div>
             <div>
                 <input type="submit">
@@ -84,20 +97,25 @@
             <!--panel de navegacion inferior-->
             <ul class="nav justify-content-evenly">
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../index.html">Inicio</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../index.html">Inicio</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/quienes-somos.html">Quienes
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/quienes-somos.html">Quienes
                         somos</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/experiencias.html">Experiencias</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/experiencias.html">Experiencias</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/merchandising.html">Merchandising</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/merchandising.html">Merchandising</a>
                 </li>
                 <li>
-                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/contacto.html">Contacto</a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                        href="../pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -120,6 +138,9 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
