arreglos de ultima correccion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!--titulo izquierdo-->
             <h1 class="header__h">Team Ghost Argentina</h1>
             <!--imagen central-->
-            <img class="header__img" src="./image/Logo Team Ghost Sombra.png" alt="Logo del equipo">
+            <a href="./index.html"><img class="header__img" src="./image/logo team ghost sombra.png" alt="Logo del equipo"></a>
             <!--titulo derecho-->
             <h2 class="header__h">Airsoft Team</h2>
         </section>
@@ -84,7 +84,7 @@
                         08:00hs</p>
                 </div>
                 <div>
-                    <img src="./image/JDG logo.jpeg" alt="imagen del campo u organizacion">
+                    <img src="./image/jdg logo.jpeg" alt="imagen del campo u organizacion">
                 </div>
             </div>
         </section>
