--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
             <!--titulo izquierdo-->
             <h1 class="header__h">Team Ghost Argentina</h1>
             <!--imagen central-->
-            <img class="header__img" src="../image/Logo Team Ghost Sombra.png" alt="Logo del equipo">
+            <a href="../index.html"><img class="header__img" src="../image/logo team ghost sombra.png" alt="Logo del equipo"></a>
             <!--titulo derecho-->
             <h2 class="header__h">Airsoft Team</h2>
         </section>
