--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <title>Team Ghost Argentina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
@@ -24,7 +24,13 @@
             <h2 class="header__h">Airsoft Team</h2>
         </section>
         <nav>
-            <ul class="nav">
+            <div class="nav__iconoburguer">
+                <label for="nav-input">
+                    <img src="../image/burguer.png" alt="icono-menu">
+                </label>
+            </div>
+            <input type="checkbox" class="nav__input" id="nav-input">
+            <ul class="nav" id="nav">
                 <li class="nav-item bg-primary rounded">
                     <a class="nav-link btn btn-secondary text-light" href="../index.html">Inicio</a>
                 </li>
