--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
-    <title>Team Ghost Argentina</title>
+    <link rel="shortcut icon" href="../image/icon.ico" type="image/x-icon">
+    <meta name="keywords" content="airsoft, deporte, armas, productos, equipo, team, ghost, argentina, arg, operador, operadores, aire, comprimido, bbs, balines, plasticos, campo, geu, jdg, juegos, experiencia, simulacion, milsim, dinamico, replica, replicas ">
+    <meta name="description" content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales.">
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Team Ghost Argentina"/>
+    <meta property="og:url" content="https://jean-valdivia.github.io/Curso-DW/pages/contacto.html"/>
+    <meta property="og:image" content="https://i.postimg.cc/52hT5xcQ/logo-team-ghost-sombra.png"/>
+    <meta property="og:description" content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales."/>
+    <title>Contacto - Team Ghost Argentina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
