--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../image/icon.ico" type="image/x-icon">
-    <meta name="keywords" content="airsoft, deporte, armas, productos, equipo, team, ghost, argentina, arg, operador, operadores, aire, comprimido, bbs, balines, plasticos, campo, geu, jdg, juegos, experiencia, simulacion, milsim, dinamico, replica, replicas">
-    <meta name="description" content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales.">
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Team Ghost Argentina"/>
-    <meta property="og:url" content="https://jean-valdivia.github.io/Curso-DW/pages/experiencias.html"/>
-    <meta property="og:image" content="https://i.postimg.cc/52hT5xcQ/logo-team-ghost-sombra.png"/>
-    <meta property="og:description" content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales."/>
+    <meta name="keywords"
+        content="airsoft, deporte, armas, productos, equipo, team, ghost, argentina, arg, operador, operadores, aire, comprimido, bbs, balines, plasticos, campo, geu, jdg, juegos, experiencia, simulacion, milsim, dinamico, replica, replicas">
+    <meta name="description"
+        content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales.">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Team Ghost Argentina" />
+    <meta property="og:url" content="https://jean-valdivia.github.io/Curso-DW/pages/experiencias.html" />
+    <meta property="og:image" content="https://i.postimg.cc/52hT5xcQ/logo-team-ghost-sombra.png" />
+    <meta property="og:description"
+        content="Equipo de Airsoft, proveniente del Area Metropolitana de Buenos Aires. Somos un grupo amateur de aficionados al deporte. Solemos jugar en diferentes campos de la zona. Podes encontrarnos en diferentes eventos especiales." />
     <title>Experiencias - Team Ghost Argentina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -28,7 +31,8 @@
             <!--titulo izquierdo-->
             <h1 class="header__h">Team Ghost Argentina</h1>
             <!--imagen central-->
-            <a href="../index.html"><img class="header__img" src="../image/logo team ghost sombra.png" alt="Logo del equipo"></a>
+            <a href="../index.html"><img class="header__img" src="../image/logo team ghost sombra.png"
+                    alt="Logo del equipo"></a>
             <!--titulo derecho-->
             <h2 class="header__h">Airsoft Team</h2>
         </section>
@@ -62,57 +66,75 @@
         <section>
             <h3>Aca te dejamos un poco de nuestras experiencias jugando en los diferentes campos...</h3>
         </section>
-        <section class="main_section_experiencias">
-            <div>
-                <p>
-                    <button class="btn btn-outline-danger" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
-                        JDG (Juegos de Guerra)
-                    </button>
-                </p>
-                <p>
-                    <button class="btn btn-outline-info" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
-                        Experiencia Airsoft
-                    </button>
-                </p>
-                <p>
-                    <button class="btn btn-outline-warning" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
-                        GEU
-                    </button>
-                </p>
-                <div class="collapse" id="collapseExample1">
-                    <div class="card card-body">
-                        <div>
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/kg32Lqjp/jdg1.jpg" alt="jdg1">
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/tgD71P9K/jdg2.jpg" alt="jdg2">
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/HkwrgRRs/jdg3.jpg" alt="jdg3">
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/bvqsNLf0/jdg4.jpg" alt="jdg4">
+
+        <section class="main__acordeon">
+            <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed text-danger" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            JDG (Juegos de Guerra)
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/kg32Lqjp/jdg1.jpg"
+                                alt="jdg1">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/tgD71P9K/jdg2.jpg"
+                                alt="jdg2">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/HkwrgRRs/jdg3.jpg"
+                                alt="jdg3">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/bvqsNLf0/jdg4.jpg"
+                                alt="jdg4">
                         </div>
                     </div>
                 </div>
-                <div class="collapse" id="collapseExample2">
-                    <div class="card card-body">
-                        <div>
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/L6qPrymn/exp1.jpg" alt="exp1">
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/3NkyQR5P/exp2.jpg" alt="exp2">
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/Rh2WSBvq/exp3.jpg" alt="exp3">
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/Z5pdqCBm/exp4.jpg" alt="exp4">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed text-info" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Experiencia Airsoft
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/L6qPrymn/exp1.jpg"
+                                alt="exp1">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/3NkyQR5P/exp2.jpg"
+                                alt="exp2">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/Rh2WSBvq/exp3.jpg"
+                                alt="exp3">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/Z5pdqCBm/exp4.jpg"
+                                alt="exp4">
                         </div>
                     </div>
                 </div>
-                <div class="collapse" id="collapseExample3">
-                    <div class="card card-body">
-                        <div>
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/C5nK6Qb0/GEU1.jpg" alt="geu1">
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/nc74XdgN/GEU2.jpg" alt="geu2">
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/N0GmPQFw/GEU3.jpg" alt="geu3">
-                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/y8y0PDVP/GEU4.jpg" alt="geu4">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed text-warning" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            GEU
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/C5nK6Qb0/GEU1.jpg"
+                                alt="geu1">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/nc74XdgN/GEU2.jpg"
+                                alt="geu2">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/N0GmPQFw/GEU3.jpg"
+                                alt="geu3">
+                            <img class="main_section_experiencias_img" src="https://i.postimg.cc/y8y0PDVP/GEU4.jpg"
+                                alt="geu4">
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
 
     </main>
     <footer>
