correccion de clase

--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -67,7 +67,7 @@
             <h3>Aca te dejamos un poco de nuestras experiencias jugando en los diferentes campos...</h3>
         </section>
 
-        <section class="main__acordeon">
+        <section class="exp__main__acordeon">
             <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
