aplicacion de mixin y list

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav>
             <div class="nav__iconoburguer">
                 <label for="nav-input">
-                    <img src="../image/burguer.png" alt="icono-menu">
+                    <img src="./image/burguer.png" alt="icono-menu">
                 </label>
             </div>
             <input type="checkbox" class="nav__input" id="nav-input">
