--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -27,7 +27,7 @@
 
 <body>
     <header>
-        <section>
+        <div>
             <!--titulo izquierdo-->
             <h1 class="header__h">Team Ghost Argentina</h1>
             <!--imagen central-->
@@ -35,7 +35,7 @@
                     alt="Logo del equipo"></a>
             <!--titulo derecho-->
             <h2 class="header__h">Airsoft Team</h2>
-        </section>
+        </div>
         <nav>
             <div class="nav__iconoburguer">
                 <label for="nav-input">
