--- a/pages/merchandising.html
+++ b/pages/merchandising.html
@@ -25,14 +25,14 @@
 
 <body>
     <header>
-        <section>
+        <div>
             <!--titulo izquierdo-->
             <h1 class="header__h">Team Ghost Argentina</h1>
             <!--imagen central-->
             <a href="../index.html"><img class="header__img" src="../image/logo_team_ghost_sombra.png" alt="Logo del equipo"></a>
             <!--titulo derecho-->
             <h2 class="header__h">Airsoft Team</h2>
-        </section>
+        </div>
         <nav>
             <div class="nav__iconoburguer">
                 <label for="nav-input">
