--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,7 +108,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
                     placeholder="O propone algun plan..."></textarea>
             </div>
-            <div>
+            <div class="form__div__buttons">
                 <input type="submit">
                 <input type="reset">
             </div>
