--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                 <p>Pagina oficial del equipo mas picante del condado. Una serie de maniaticos fanaticos de las armas que
                     encontraron un juego en el cual pueden satisfacer todas sus necesidades de matanza y diversion
                 </p>
-                <img src="./image/equipo_airsoft.jpeg" alt="imagen equipo">
+                <div>
+                    <img src="./image/equipo_airsoft.jpeg" alt="imagen equipo">
+                </div>
             </div>
         </section>
         <section class="main__section__noticias">
