--- a/pages/merchandising.html
+++ b/pages/merchandising.html
@@ -69,7 +69,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Soporte para M4</h5>
                     <p class="card-text">Impreso en 3D con todo el amor de Likoy. Util para poner en exhibicion tu Marker.</p>
-                    <a href="#" class="btn btn-dark">2000$</a>
+                    <button class="btn btn-dark">2000$</button>
                 </div>
             </div>
             <div class="card text-center mb-3 merch2" style="width: 18rem;">
@@ -77,7 +77,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Guantes Tacticos</h5>
                     <p class="card-text">Para cuidar tus manos y tener el mejor agarre en cualquier condicion.</p>
-                    <a href="#" class="btn btn-dark">5000$</a>
+                    <button class="btn btn-dark">5000$</button>
                 </div>
             </div>
             <div class="card text-center mb-3 merch3" style="width: 18rem;">
@@ -85,7 +85,7 @@
                 <div class="card-body">
                     <h5 class="card-title">chestrig Multicam</h5>
                     <p class="card-text">Siempre lleva todo lo necesario para la batalla encima.</p>
-                    <a href="#" class="btn btn-dark">15000$</a>
+                    <button class="btn btn-dark">15000$</button>
                 </div>
             </div>
             <div class="card text-center mb-3 merch4" style="width: 18rem;">
@@ -93,7 +93,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Funda Portafusil</h5>
                     <p class="card-text">Para transportar tu replica de manera comoda.</p>
-                    <a href="#" class="btn btn-dark">3000$</a>
+                    <button class="btn btn-dark">3000$</button>
                 </div>
             </div>
             <div class="card text-center mb-3 merch5" style="width: 18rem;">
@@ -101,7 +101,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Parche Team Ghost Argentina</h5>
                     <p class="card-text">Podes añadir nuestro parche a tu coleccion.</p>
-                    <a href="#" class="btn btn-dark">4000$</a>
+                    <button class="btn btn-dark">4000$</button>
                 </div>
             </div>
             <div class="card text-center mb-3 merch6" style="width: 18rem;">
@@ -109,7 +109,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Mags Midcap M4 PTS EPM</h5>
                     <p class="card-text">Capacidad de 150 rds. Los mejores mag midcap del mercado.</p>
-                    <a href="#" class="btn btn-dark">12500$</a>
+                    <button class="btn btn-dark">12500$</button>
                 </div>
             </div>
         </section>
