actualizacion de contenido index

--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
         <section class="main__section__noticias">
             <h4>Noticias</h4>
             <div>
-                <h5>18/04/2023</h5>
-                <P>Fecha de entrega. Para esta fecha se debe tener completado el proyecto sin grids</P>
+                <h5>09/06/2023</h5>
+                <P>Fecha de entrega final. Para esta fecha se debe estar completado al 100%</P>
             </div>
             <div>
-                <h5>15/04/2023</h5>
-                <P>Se comienza a aplicar CSS en todas las paginas</P>
+                <h5>16/05/2023</h5>
+                <P>Tercera preentrega realizada con exito. Nota: Optimo</P>
             </div>
             <div>
-                <h5>08/04/2023</h5>
-                <P>Pagina en creacion</P>
+                <h5>02/05/2023</h5>
+                <P>Segunda preentrega realizada con exito. Nota: Optimo</P>
             </div>
         </section>
         <section class="main__section__proximoevento">
@@ -96,7 +96,7 @@
                         llevan a cabo entrenamientos de ingreso a areas y cobertura de altura. El evento esta
                         organizado por "Juegos de Guerra" acompañado de "7.62 Cafe". Las coordenadas del lugar
                         son:
-                        "-34.504619, -58.629573". El evento se realiza el dia Sabado 22/04/23 con ingreso a las
+                        "-34.504619, -58.629573". El evento se realiza el dia Lunes 19/06/23 con ingreso a las
                         08:00hs</p>
                 </div>
                 <div>
